tests/ui/struct_unit.stderr
error: `TryFromRow`: unit-structs are not supported
 --> tests/ui/struct_unit.rs:2:1
  |
2 | struct MyStruct;
  | ^^^^^^^^^^^^^^^^
